# haskell-pacman

./: README.md  plan-fp-game.md
pacman/: gloss-counter.cabal  gloss-pacman.cabal  stack.yaml
pacman-game/: Makefile  pacman-game.cabal
pacman-game/app/: Boards.hs  Controller.hs  Main.hs  Model.hs  Test.hs  View.hs
pacman-game/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pacman/.stack-work/: stack.sqlite3
pacman/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pacman/src/: Controller.hs  Main.hs  Model.hs  View.hs
pacman/src/Controller/: HighScore.hs  Input.hs  Render.hs  Update.hs
pacman/src/Model/: Constants.hs
pacman/src/Model/Ai/: Functions.hs
pacman/src/Model/Board/: Functions.hs  GameBoard.hs  Types.hs
pacman/src/Model/GameState/: Functions.hs  Types.hs
pacman/src/Model/Ghosts/: Functions.hs  Types.hs
pacman/src/Model/Pacman/: Functions.hs  Types.hs
pacman/src/Model/Utils/: Functions.hs  Types.hs
pacman/src/View/: Food.hs  GameBoard.hs  Ghosts.hs  Menu.hs  Pacman.hs  PowerCookie.hs  Score.hs  Walls.hs  Window.hs
