name:                gloss-pacman
version:             0.1.0.0
author:              Espen Noreng
maintainer:          espennoreng@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       gloss,
                       gloss-juicy,
                       random
  hs-source-dirs:      src
  other-modules:       Controller.HighScore
                       Controller.Input
                       Controller.Render
                       Controller.Update
                       Model.Ai.Functions
                       Model.Board.Functions
                       Model.Board.GameBoard
                       Model.Board.Types
                       Model.Constants
                       Model.GameState.Functions
                       Model.GameState.Types
                       Model.Ghosts.Functions
                       Model.Ghosts.Types
                       Model.Pacman.Functions
                       Model.Pacman.Types
                       Model.Utils.Functions
                       Model.Utils.Types
                       View.Food
                       View.GameBoard
                       View.Ghosts
                       View.Menu
                       View.Pacman
                       View.Score
                       View.Walls
                       View.PowerCookie
                       View.Window
  default-language:    Haskell2010